--- a/locales/de/app.json
+++ b/locales/de/app.json
@@ -16,14 +16,16 @@
       "name": "Thema",
       "light": "Hell",
       "dark": "Dunkel",
-      "system": "System"
+      "system": "System",
+      "monochromatic": "Monochrom",
+      "frostedTexture": "Mattierte Textur"
     },
-    "stayOnTop": "Im Vordergrund bleiben",
+    "stayOnTop": "Immer im Vordergrund",
+    "lockSidebar": "Seitenleiste sperren",
     "showSidebar": "Seitenleiste anzeigen",
     "hideSidebar": "Seitenleiste verstecken",
-    "devTools": "Entwicklertools",
-    "monochromatic": "Monochrom",
-    "frostedTexture": "Mattierte Textur",
+    "noiCacheMode": "Noi Cache-Modus",
+    "devTools": "Entwicklerwerkzeuge",
     "xQuit": "Klicken Sie auf [X] zum Beenden",
     "systemTray": "Systemtray",
 
@@ -48,9 +50,11 @@
     "issues": "GitHub-Probleme",
     "shareIdeas": "Ideen und Feedback teilen",
 
+    "defaultWebBrowser": "Standard-Webbrowser",
     "learnSpelling": "Rechtschreibung lernen",
     "lookUpSelection": "„{selection}“ nachschlagen",
     "searchWithGoogle": "Mit Google suchen",
+    "searchWithBing": "Mit Bing suchen",
     "cut": "Ausschneiden",
     "copy": "Kopieren",
     "paste": "Einfügen",
@@ -73,15 +77,17 @@
     "clearCache": "Cache-Daten löschen",
     "find": {
       "name": "Suchen",
-      "findNext": "Weitersuchen",
-      "findPrevious": "Vorherige suchen",
+      "findInPage": "Auf Seite suchen…",
+      "findNext": "Nächstes finden",
+      "findPrevious": "Vorheriges finden",
       "jumpToSelection": "Zur Auswahl springen"
     }
   },
   "form": {
     "name": "Name",
     "url": "URL",
-    "invalidURL": "Ungültige URL, bitte erneut eingeben.",
+    "isolatedCookieStorage": "Isolierter Cookie-Speicher",
+    "invalidURL": "Bitte geben Sie eine gültige URL ein.",
     "nameNotEmpty": "Name darf nicht leer sein."
   },
   "sidebar": {
@@ -92,9 +98,9 @@
     },
     "tip": {
       "delete": "Nach dem Löschen nicht wiederherstellbar, sind Sie sicher, dass Sie löschen möchten?",
-      "syncOverwrite": "Die Synchronisierung überschreibt alle Daten außer benutzerdefinierten Daten. Möchten Sie fortfahren?",
-      "syncReset": "Sie befinden sich derzeit auf der neuesten Version. Die Synchronisierung setzt alle Daten außer benutzerdefinierten Daten zurück. Möchten Sie fortfahren?",
-      "syncOk": "Synchronisierung erfolgreich",
+      "syncOverwrite": "Die Synchronisation wird alle Daten außer benutzerdefinierten Daten überschreiben. Möchten Sie fortfahren?",
+      "syncReset": "Sie befinden sich derzeit auf der neuesten Version. Die Synchronisation wird alle Daten außer benutzerdefinierten Daten zurücksetzen. Möchten Sie fortfahren?",
+      "syncOk": "Synchronisation erfolgreich",
       "syncResetOk": "Zurücksetzen erfolgreich"
     }
   },
@@ -112,18 +118,25 @@
       "general": {
         "name": "Allgemein",
         "syncBookmarks": "Lesezeichen synchronisieren",
-        "globalShortcut": "Globales Kürzel",
-        "trayShortcut": "Systemablage-Verknüpfung",
-        "recording": "Aufnahme...",
         "proxy": "Proxy",
         "proxyRules": "Regeln",
-        "proxyBypassRules": "Umgehungsregeln"
+        "proxyBypassRules": "Umgehungsregeln",
+        "promptLogLimit": "Protokolllimit",
+        "promptLogArchiveLimit": "Archivlimit für Protokolle",
+        "promptFavoritesLimit": "Limit für Favoriten",
+        "promptFavoritesArchiveLimit": "Archivlimit für Favoriten"
+      },
+      "keyboardShortcuts": {
+        "name": "Tastenkürzel",
+        "recording": "Aufnahme…",
+        "globalShortcut": "Globales Kürzel",
+        "trayShortcut": "Systemablage-Kürzel"
       },
       "extensions": "Erweiterungen",
       "prompts": {
         "name": "Aufforderungen",
         "userPrompts": "Benutzeraufforderungen",
-        "promptTags": "Prompt-Tags",
+        "promptTags": "Aufforderungstags",
         "customSync": "Benutzerdefinierte Synchronisierung"
       }
     },
@@ -132,24 +145,31 @@
       "batchEnable": "Sind Sie sicher, dass Sie diese Aufforderungen aktivieren möchten?",
       "batchDelete": "Sind Sie sicher, dass Sie diese Aufforderungen löschen möchten?",
       "batchDisable": "Sind Sie sicher, dass Sie diese Aufforderungen deaktivieren möchten?",
-      "batchUse": "Sind Sie sicher, dass Sie diese Aufforderungen verwenden möchten?"
+      "batchUse": "Sind Sie sicher, dass Sie diese Aufforderungen verwenden möchten?",
+      "batchTagsAdd": "Sind Sie sicher, dass Sie diese Tags hinzufügen möchten?",
+      "batchTagsDelete": "Sind Sie sicher, dass Sie diese Tags löschen möchten?"
     },
     "message": {
       "added": "Hinzugefügt",
       "synced": "Synchronisiert",
       "invalidData": "Ungültige Daten",
-      "missingActAndPrompt": "Fehlende Felder: 'act', 'prompt'. Versuchen Sie, 'Alias' zum Umbenennen zu verwenden.",
+      "missingActAndPrompt": "Fehlende Felder: 'act', 'prompt'. Versuchen Sie, 'Alias' zur Umbenennung zu verwenden.",
       "missingManifest": "Die Datei manifest.json fehlt oder ist ungültig.",
-      "checkExtension": "Bitte das Erweiterungsverzeichnis erneut überprüfen:",
+      "checkExtension": "Bitte überprüfen Sie erneut das Erweiterungsverzeichnis:",
       "existExtension": "Die Erweiterung existiert bereits."
     },
     "tip": {
-      "proxyRules": "Regeln, die angeben, welche Proxies zu verwenden sind.",
+      "proxyRules": "Regeln, die angeben, welche Proxies verwendet werden sollen.",
       "proxyBypassRules": "Regeln, die angeben, welche URLs die Proxy-Einstellungen umgehen sollen.",
       "shortcutRule": "Kürzelregel",
-      "modifierKeys": "Modifikatortasten",
+      "modifierKeys": "Modifier-Tasten",
       "regularKeys": "Reguläre Tasten",
-      "noiExtension": "Beachten Sie, dass Noi nicht den vollen Umfang der Chrome-Erweiterungs-APIs unterstützt. Siehe Unterstützte Erweiterungs-APIs für weitere Details dazu, was unterstützt wird."
+      "noiExtension": "Beachten Sie, dass Noi nicht den vollen Umfang der Chrome-Erweiterungs-APIs unterstützt. Weitere Details dazu, was unterstützt wird, finden Sie unter Unterstützte Erweiterungs-APIs.",
+      "noiCacheMode": "Speichert Webseitenzustände für den schnellen Wiederzugriff, ähnlich wie Browsertabs. Die kontinuierliche Zustandserfassung erhöht den Speicherverbrauch, insbesondere beim häufigen Zugriff auf unterschiedliche Seitenleistenlinks. Um den Speichereinfluss zu mildern, insbesondere bei Systemverzögerungen, erwägen Sie, den Cache nach mehreren Wechseln zu de aktivieren oder neu zu starten.",
+      "promptLogLimit": "Maximale Anzahl von Aufforderungen, die im Protokoll behalten werden (10-1000), standardmäßig auf 300 gesetzt.",
+      "promptLogArchiveLimit_1": "Maximale Anzahl von Aufforderungen, die in einer einzelnen Archivdatei gespeichert werden können (1000-10000), standardmäßig auf 1000 gesetzt.",
+      "promptLogArchiveLimit_2": "1. Derzeit archivierte Datei: {{file}}.archiving.json",
+      "promptLogArchiveLimit_3": "2. Namenskonvention für abgeschlossene Archivdateien: {{file}}_JJJJ.MM.TT.SS.mm.ss_JJJJ.MM.TT.SS.mm.ss.json, wobei JJJJ.MM.TT.SS.mm.ss jeweils die Anfangs- und Endzeiten darstellen. Zum Beispiel: {{file}}_2024.01.01.12.00.00_2024.08.08.10.10.00.json"
     },
     "table": {
       "name": "Name",
@@ -181,13 +201,17 @@
     "search": "Suchen",
     "select": "Auswählen",
     "use": "Verwenden",
+    "copied": "Kopiert",
+    "batchAdd": "Batch-Hinzufügung",
     "batchDisable": "Batch-Deaktivierung",
     "batchEnable": "Batch-Aktivierung",
     "batchDelete": "Batch-Löschung",
     "batchUse": "Batch-Verwendung"
   },
   "prompt": {
-    "promptSend": "Prompt Senden",
+    "promptFavorite": "Prompt-Favoriten",
+    "promptLog": "Prompt-Protokoll",
+    "promptSend": "Prompt senden",
     "newChat": "Neuer Chat",
     "sendMessage": "Nachricht senden",
     "resetPanel": "Panel zurücksetzen",
