--- a/locales/es/app.json
+++ b/locales/es/app.json
@@ -16,31 +16,33 @@
       "name": "Tema",
       "light": "Claro",
       "dark": "Oscuro",
-      "system": "Sistema"
+      "system": "Sistema",
+      "monochromatic": "Monocromático",
+      "frostedTexture": "Textura esmerilada"
     },
-    "stayOnTop": "Mantener al Frente",
-    "showSidebar": "Mostrar Barra Lateral",
-    "hideSidebar": "Ocultar Barra Lateral",
-    "devTools": "Herramientas para Desarrolladores",
-    "monochromatic": "Monocromático",
-    "frostedTexture": "Textura Esmerilada",
-    "xQuit": "Clic en [X] para Salir",
+    "stayOnTop": "Mantener al frente",
+    "lockSidebar": "Bloquear barra lateral",
+    "showSidebar": "Mostrar barra lateral",
+    "hideSidebar": "Ocultar barra lateral",
+    "noiCacheMode": "Modo de caché de Noi",
+    "devTools": "Herramientas para desarrolladores",
+    "xQuit": "Hacer clic en [X] para salir",
     "systemTray": "Bandeja del Sistema",
 
     "edit": "Editar",
     "undo": "Deshacer",
     "redo": "Rehacer",
-    "pasteAndMatchStyle": "Pegar y Coincidir Estilo",
+    "pasteAndMatchStyle": "Pegar y coincidir estilo",
     "delete": "Eliminar",
 
-    "view": "Vista",
-    "refresh": "Actualizar la Página",
-    "goBack": "Retroceder",
-    "goForward": "Avanzar",
-    "resetZoom": "Tamaño Real",
-    "zoomIn": "Acercar",
-    "zoomOut": "Alejar",
-    "fullScreen": "Pantalla Completa",
+    "view": "Ver",
+    "refresh": "Actualizar la página",
+    "goBack": "Ir atrás",
+    "goForward": "Ir adelante",
+    "resetZoom": "Tamaño real",
+    "zoomIn": "Ampliar",
+    "zoomOut": "Reducir",
+    "fullScreen": "Pantalla completa",
 
     "help": "Ayuda",
     "log": "Registro de Noi",
@@ -48,31 +50,34 @@
     "issues": "Incidencias en GitHub",
     "shareIdeas": "Compartir Ideas y Retroalimentación",
 
-    "learnSpelling": "Aprender Ortografía",
+    "defaultWebBrowser": "Navegador web predeterminado",
+    "learnSpelling": "Aprender ortografía",
     "lookUpSelection": "Buscar “{selection}”",
     "searchWithGoogle": "Buscar con Google",
+    "searchWithBing": "Buscar con Bing",
     "cut": "Cortar",
     "copy": "Copiar",
     "paste": "Pegar",
-    "selectAll": "Seleccionar Todo",
-    "saveImage": "Guardar Imagen",
-    "saveImageAs": "Guardar Imagen Como…",
-    "saveVideo": "Guardar Video",
-    "saveVideoAs": "Guardar Video Como…",
-    "copyLink": "Copiar Enlace",
-    "saveLinkAs": "Guardar Enlace Como…",
-    "copyImage": "Copiar Imagen",
-    "copyImageAddress": "Copiar Dirección de la Imagen",
-    "copyVideoAddress": "Copiar Dirección del Video",
-    "inspect": "Inspeccionar Elemento",
+    "selectAll": "Seleccionar todo",
+    "saveImage": "Guardar imagen",
+    "saveImageAs": "Guardar imagen como…",
+    "saveVideo": "Guardar video",
+    "saveVideoAs": "Guardar video como…",
+    "copyLink": "Copiar enlace",
+    "saveLinkAs": "Guardar enlace como…",
+    "copyImage": "Copiar imagen",
+    "copyImageAddress": "Copiar dirección de imagen",
+    "copyVideoAddress": "Copiar dirección de video",
+    "inspect": "Inspeccionar elemento",
     "services": "Servicios",
     "reload": "Recargar",
     "rename": "Renombrar",
     "user": "Usuario",
-    "setSystemTray": "Establecer como Bandeja del Sistema",
-    "clearCache": "Limpiar Datos de Caché",
+    "setSystemTray": "Establecer como bandeja del sistema",
+    "clearCache": "Limpiar datos de caché",
     "find": {
       "name": "Buscar",
+      "findInPage": "Buscar en la página…",
       "findNext": "Buscar siguiente",
       "findPrevious": "Buscar anterior",
       "jumpToSelection": "Saltar a la selección"
@@ -81,7 +86,8 @@
   "form": {
     "name": "Nombre",
     "url": "URL",
-    "invalidURL": "URL inválida, por favor ingrese de nuevo.",
+    "isolatedCookieStorage": "Almacenamiento de cookies aislado",
+    "invalidURL": "Por favor, introduzca una URL válida.",
     "nameNotEmpty": "El nombre no puede estar vacío."
   },
   "sidebar": {
@@ -91,7 +97,7 @@
       "trayDelete": "La bandeja del sistema está utilizando la URL actual, no se puede eliminar."
     },
     "tip": {
-      "delete": "No se puede recuperar después de eliminar, ¿está seguro de que desea eliminar?",
+      "delete": "No se puede recuperar después de eliminar, ¿está seguro de que quiere eliminar?",
       "syncOverwrite": "La sincronización sobrescribirá todos los datos excepto los datos personalizados. ¿Desea continuar?",
       "syncReset": "Actualmente está en la última versión. La sincronización restablecerá todos los datos excepto los datos personalizados. ¿Desea continuar?",
       "syncOk": "Sincronización exitosa",
@@ -111,20 +117,27 @@
     "menu": {
       "general": {
         "name": "General",
-        "syncBookmarks": "Sincronizar Marcadores",
-        "globalShortcut": "Atajo global",
-        "trayShortcut": "Acceso directo de la bandeja del sistema",
-        "recording": "Grabando…",
+        "syncBookmarks": "Sincronizar marcadores",
         "proxy": "Proxy",
         "proxyRules": "Reglas",
-        "proxyBypassRules": "Reglas de Omisión"
+        "proxyBypassRules": "Reglas de omisión de proxy",
+        "promptLogLimit": "Límite de registro de prompts",
+        "promptLogArchiveLimit": "Límite de archivo de registro de prompts",
+        "promptFavoritesLimit": "Límite de favoritos de prompts",
+        "promptFavoritesArchiveLimit": "Límite de archivo de favoritos de prompts"
+      },
+      "keyboardShortcuts": {
+        "name": "Atajos de teclado",
+        "recording": "Grabando…",
+        "globalShortcut": "Atajo global",
+        "trayShortcut": "Atajo de bandeja del sistema"
       },
       "extensions": "Extensiones",
       "prompts": {
         "name": "Prompts",
-        "userPrompts": "Prompts de Usuario",
-        "promptTags": "Etiquetas de Prompt",
-        "customSync": "Sincronización Personalizada"
+        "userPrompts": "Prompts de usuario",
+        "promptTags": "Etiquetas de prompts",
+        "customSync": "Sincronización personalizada"
       }
     },
     "confirm": {
@@ -132,24 +145,31 @@
       "batchEnable": "¿Está seguro de que desea habilitar estos prompts?",
       "batchDelete": "¿Está seguro de que desea eliminar estos prompts?",
       "batchDisable": "¿Está seguro de que desea deshabilitar estos prompts?",
-      "batchUse": "¿Está seguro de que desea usar estos prompts?"
+      "batchUse": "¿Está seguro de que desea usar estos prompts?",
+      "batchTagsAdd": "¿Está seguro de que desea añadir estas etiquetas?",
+      "batchTagsDelete": "¿Está seguro de que desea eliminar estas etiquetas?"
     },
     "message": {
       "added": "Añadido",
       "synced": "Sincronizado",
-      "invalidData": "Datos Inválidos",
-      "missingActAndPrompt": "Faltan campos: 'act', 'prompt'. Intente usar 'Alias' para renombrar.",
+      "invalidData": "Datos inválidos",
+      "missingActAndPrompt": "Campos faltantes: 'act', 'prompt'. Intente usar 'Alias' para renombrar.",
       "missingManifest": "El archivo manifest.json falta o es inválido.",
-      "checkExtension": "Por favor, vuelva a comprobar el directorio de extensión:",
+      "checkExtension": "Por favor, reconsidere el directorio de extensiones:",
       "existExtension": "La extensión ya existe."
     },
     "tip": {
       "proxyRules": "Reglas que indican qué proxies usar.",
-      "proxyBypassRules": "Reglas que indican qué URLs deben omitir la configuración de proxy.",
-      "shortcutRule": "Regla de Atajo",
-      "modifierKeys": "Teclas Modificadoras",
-      "regularKeys": "Teclas Regulares",
-      "noiExtension": "Tenga en cuenta que Noi no soporta la gama completa de APIs de extensiones de Chrome. Vea APIs de Extensiones Soportadas para más detalles sobre lo que se soporta."
+      "proxyBypassRules": "Reglas que indican qué URLs deben omitir la configuración del proxy.",
+      "shortcutRule": "Regla de atajo",
+      "modifierKeys": "Teclas modificadoras",
+      "regularKeys": "Teclas regulares",
+      "noiExtension": "Tenga en cuenta que Noi no admite la gama completa de APIs de extensiones de Chrome. Consulte APIs de Extensiones Soportadas para más detalles sobre lo que se admite.",
+      "noiCacheMode": "Almacena estados de páginas web para un rápido reacceso, similar a las pestañas del navegador. La grabación continua de estados aumenta el uso de memoria, especialmente cuando se accede frecuentemente a diferentes enlaces de la barra lateral. Para mitigar el impacto en la memoria, especialmente durante la lentitud del sistema, considere deshabilitar o reiniciar la caché después de múltiples cambios.",
+      "promptLogLimit": "Número máximo de prompts a retener en el registro (10-1000), con un valor predeterminado de 300.",
+      "promptLogArchiveLimit_1": "Número máximo de prompts que se pueden almacenar en un solo archivo de archivo (1000-10000), con un valor predeterminado de 1000.",
+      "promptLogArchiveLimit_2": "1. Archivo que se está archivando actualmente: {{file}}.archiving.json",
+      "promptLogArchiveLimit_3": "2. Convención de nombres para archivos de archivo completados: {{file}}_YYYY.MM.DD.HH.mm.ss_YYYY.MM.DD.HH.mm.ss.json, donde YYYY.MM.DD.HH.mm.ss representa los tiempos de inicio y fin, respectivamente. Por ejemplo: {{file}}_2024.01.01.12.00.00_2024.08.08.10.10.00.json"
     },
     "table": {
       "name": "Nombre",
@@ -181,17 +201,21 @@
     "search": "Buscar",
     "select": "Seleccionar",
     "use": "Usar",
-    "batchDisable": "Deshabilitación en Lote",
-    "batchEnable": "Habilitación en Lote",
-    "batchDelete": "Eliminación en Lote",
-    "batchUse": "Uso en Lote"
+    "copied": "Copiado",
+    "batchAdd": "Añadir en lote",
+    "batchDisable": "Deshabilitar en lote",
+    "batchEnable": "Habilitar en lote",
+    "batchDelete": "Eliminar en lote",
+    "batchUse": "Usar en lote"
   },
   "prompt": {
-    "promptSend": "Enviar Prompt",
-    "newChat": "Chat Nuevo",
-    "sendMessage": "Enviar Mensaje",
-    "resetPanel": "Restablecer Panel",
-    "promptCmd": "Comando de Prompt",
+    "promptFavorite": "Favoritos de prompts",
+    "promptLog": "Registro de prompts",
+    "promptSend": "Enviar prompt",
+    "newChat": "Nuevo chat",
+    "sendMessage": "Enviar mensaje",
+    "resetPanel": "Restablecer panel",
+    "promptCmd": "Comando de prompt",
     "sizeSmall": "Pequeño",
     "sizeMedium": "Mediano",
     "sizeLarge": "Grande"
