--- a/locales/ru/app.json
+++ b/locales/ru/app.json
@@ -16,21 +16,23 @@
       "name": "Тема",
       "light": "Светлая",
       "dark": "Темная",
-      "system": "Системная"
+      "system": "Системная",
+      "monochromatic": "Монохромная",
+      "frostedTexture": "Матовая текстура"
     },
-    "stayOnTop": "Поверх других окон",
+    "stayOnTop": "Поверх окон",
+    "lockSidebar": "Заблокировать боковую панель",
     "showSidebar": "Показать боковую панель",
     "hideSidebar": "Скрыть боковую панель",
+    "noiCacheMode": "Режим кэширования Noi",
     "devTools": "Инструменты разработчика",
-    "monochromatic": "Монохромный",
-    "frostedTexture": "Матовая текстура",
     "xQuit": "Нажмите [X] для выхода",
     "systemTray": "Системный трей",
 
     "edit": "Редактировать",
     "undo": "Отменить",
     "redo": "Повторить",
-    "pasteAndMatchStyle": "Вставить с соответствием стиля",
+    "pasteAndMatchStyle": "Вставить с соответствием стилю",
     "delete": "Удалить",
 
     "view": "Вид",
@@ -40,7 +42,7 @@
     "resetZoom": "Исходный размер",
     "zoomIn": "Увеличить",
     "zoomOut": "Уменьшить",
-    "fullScreen": "Во весь экран",
+    "fullScreen": "На весь экран",
 
     "help": "Помощь",
     "log": "Журнал Noi",
@@ -48,9 +50,11 @@
     "issues": "GitHub Проблемы",
     "shareIdeas": "Поделиться идеями и отзывами",
 
+    "defaultWebBrowser": "Браузер по умолчанию",
     "learnSpelling": "Изучить правописание",
-    "lookUpSelection": "Поискать “{selection}”",
+    "lookUpSelection": "Посмотреть “{selection}”",
     "searchWithGoogle": "Поиск через Google",
+    "searchWithBing": "Поиск через Bing",
     "cut": "Вырезать",
     "copy": "Копировать",
     "paste": "Вставить",
@@ -73,7 +77,8 @@
     "clearCache": "Очистить данные кэша",
     "find": {
       "name": "Найти",
-      "findNext": "Найти далее",
+      "findInPage": "Найти на странице…",
+      "findNext": "Найти следующее",
       "findPrevious": "Найти предыдущее",
       "jumpToSelection": "Перейти к выбору"
     }
@@ -81,6 +86,7 @@
   "form": {
     "name": "Имя",
     "url": "URL",
+    "isolatedCookieStorage": "Изолированное хранение cookies",
     "invalidURL": "Неверный URL, пожалуйста, введите заново.",
     "nameNotEmpty": "Имя не может быть пустым."
   },
@@ -91,7 +97,7 @@
       "trayDelete": "Системный трей использует текущий URL, его нельзя удалить."
     },
     "tip": {
-      "delete": "Невозможно восстановить после удаления, вы уверены, что хотите удалить?",
+      "delete": "После удаления восстановление невозможно, вы уверены, что хотите удалить?",
       "syncOverwrite": "Синхронизация перезапишет все данные, кроме пользовательских. Вы хотите продолжить?",
       "syncReset": "Вы используете последнюю версию. Синхронизация сбросит все данные, кроме пользовательских. Вы хотите продолжить?",
       "syncOk": "Синхронизация успешна",
@@ -110,14 +116,21 @@
   "settings": {
     "menu": {
       "general": {
-        "name": "Общие",
+        "name": "Основные",
         "syncBookmarks": "Синхронизировать закладки",
-        "globalShortcut": "Глобальные горячие клавиши",
-        "trayShortcut": "Ярлык в системном трее",
-        "recording": "Запись...",
         "proxy": "Прокси",
         "proxyRules": "Правила",
-        "proxyBypassRules": "Правила обхода"
+        "proxyBypassRules": "Исключения",
+        "promptLogLimit": "Лимит журнала запросов",
+        "promptLogArchiveLimit": "Лимит архивации журнала запросов",
+        "promptFavoritesLimit": "Лимит избранных",
+        "promptFavoritesArchiveLimit": "Лимит архивации избранных"
+      },
+      "keyboardShortcuts": {
+        "name": "Горячие клавиши",
+        "recording": "Запись…",
+        "globalShortcut": "Глобальная комбинация",
+        "trayShortcut": "Комбинация для системного трея"
       },
       "extensions": "Расширения",
       "prompts": {
@@ -129,10 +142,12 @@
     },
     "confirm": {
       "delete": "Вы уверены, что хотите удалить эту запись?",
-      "batchEnable": "Вы уверены, что хотите включить эти запросы?",
+      "batchEnable": "Вы уверены, что хотите активировать эти запросы?",
       "batchDelete": "Вы уверены, что хотите удалить эти запросы?",
-      "batchDisable": "Вы уверены, что хотите отключить эти запросы?",
-      "batchUse": "Вы уверены, что хотите использовать эти запросы?"
+      "batchDisable": "Вы уверены, что хотите деактивировать эти запросы?",
+      "batchUse": "Вы уверены, что хотите использовать эти запросы?",
+      "batchTagsAdd": "Вы уверены, что хотите добавить эти теги?",
+      "batchTagsDelete": "Вы уверены, что хотите удалить эти теги?"
     },
     "message": {
       "added": "Добавлено",
@@ -145,11 +160,16 @@
     },
     "tip": {
       "proxyRules": "Правила, указывающие, какие прокси использовать.",
-      "proxyBypassRules": "Правила, указывающие, какие URL следует обходить настройки прокси.",
-      "shortcutRule": "Правило горячих клавиш",
-      "modifierKeys": "Модификаторы клавиш",
+      "proxyBypassRules": "Правила, указывающие, какие URL следует обходить в настройках прокси.",
+      "shortcutRule": "Правило для сочетаний клавиш",
+      "modifierKeys": "Модифицирующие клавиши",
       "regularKeys": "Обычные клавиши",
-      "noiExtension": "Обратите внимание, что Noi не поддерживает полный спектр API расширений Chrome. Смотрите Поддерживаемые API расширений для получения дополнительной информации о поддерживаемом."
+      "noiExtension": "Обратите внимание, что Noi не поддерживает полный спектр API расширений Chrome. Смотрите поддерживаемые API расширений для получения дополнительной информации о том, что поддерживается.",
+      "noiCacheMode": "Кеширует состояния веб-страниц для быстрого повторного доступа, аналогично вкладкам браузера. Непрерывная запись состояний увеличивает использование памяти, особенно при частом доступе к различным ссылкам боковой панели. Чтобы снизить воздействие на память, особенно во время замедления системы, рассмотрите возможность отключения или перезапуска кэша после множественных переключений.",
+      "promptLogLimit": "Максимальное количество сохраняемых подсказок в журнале (от 10 до 1000), по умолчанию установлено 300.",
+      "promptLogArchiveLimit_1": "Максимальное количество подсказок, которое может быть сохранено в одном архивном файле (от 1000 до 10000), по умолчанию установлено 1000.",
+      "promptLogArchiveLimit_2": "1. Файл, который в настоящее время архивируется: {{file}}.archiving.json",
+      "promptLogArchiveLimit_3": "2. Соглашение об именовании для завершенных архивных файлов: {{file}}_ГГГГ.ММ.ДД.ЧЧ.мм.сс_ГГГГ.ММ.ДД.ЧЧ.мм.сс.json, где ГГГГ.ММ.ДД.ЧЧ.мм.сс представляют начальное и конечное время соответственно. Например: {{file}}_2024.01.01.12.00.00_2024.08.08.10.10.00.json"
     },
     "table": {
       "name": "Имя",
@@ -181,18 +201,22 @@
     "search": "Поиск",
     "select": "Выбрать",
     "use": "Использовать",
+    "copied": "Скопировано",
+    "batchAdd": "Пакетное добавление",
     "batchDisable": "Пакетное отключение",
     "batchEnable": "Пакетное включение",
     "batchDelete": "Пакетное удаление",
     "batchUse": "Пакетное использование"
   },
   "prompt": {
-    "promptSend": "Отправка запроса",
+    "promptFavorite": "Избранные подсказки",
+    "promptLog": "Журнал подсказок",
+    "promptSend": "Отправить подсказку",
     "newChat": "Новый чат",
     "sendMessage": "Отправить сообщение",
     "resetPanel": "Сбросить панель",
-    "promptCmd": "Команда запроса",
-    "sizeSmall": "Маленький",
+    "promptCmd": "Команда подсказки",
+    "sizeSmall": "Малый",
     "sizeMedium": "Средний",
     "sizeLarge": "Большой"
   }
