--- a/locales/noi.lang.json
+++ b/locales/noi.lang.json
@@ -3,6 +3,7 @@
   "link": "https://github.com/lencx/noi/blob/main/locales/noi.lang.json",
   "locales": [
     { "code": "en", "label": "English" },
+    { "code": "fa", "label": "فارسی" },
     { "code": "zh", "label": "简体中文" },
     { "code": "zh_Hant", "label": "繁體中文" },
     { "code": "ja", "label": "日本語" },
